# openpiv-c--qt

./: .gitignore  .gitmodules  BUILD_WHEELS.md  CMakeLists.txt  LOCAL_TESTING.md  MANIFEST.in  PYTHON_INTEGRATION.md  PYTHON_README.md  README.md  example_python_usage.py  index.html  meson.build  meson_options.txt  params.json  piv_bindings.cpp  plot_all_results.py  plot_piv.py  pyproject.toml  setup.py  test_openpiv_cpp.py  vcpkg.json
.github/workflows/: build_test.yml  cmake.yml  release.yml  wheels.yml
examples/average_subtract/: CMakeLists.txt
examples/process/: CMakeLists.txt  meson.build
openpiv/: CMakeLists.txt  meson.build
openpiv/algos/: stats.h
openpiv/core/: dll_export.h  grid.h  image.h  log.h  pixel_types.h  rect.h  size.h  vector_field.h
openpiv/core/detail/: grid.impl.h
openpiv/interp/: map_polynomial.h  map_sinc.h
openpiv/interp/detail/: interp_common.impl.cpp  interp_common.impl.h  map_polynomial.impl.cpp  map_polynomial.impl.h  map_sinc.impl.cpp  map_sinc.impl.h
openpiv/loaders/: image_loader.h  pnm_image_loader.h  tiff_image_loader.h
openpiv/piv/: evaluation.h
openpiv/piv/detail/: deformation.impl.h  evaluation.impl.cpp  evaluation.impl.h
openpiv_cpp_pkg/: __init__.py
scripts/: Dockerfile.cmake-test  README.md  test_cmake_docker.sh  test_cmake_workflow.sh
test/: CMakeLists.txt
wrapper/: meson.build
wrapper/core/: pixel_types.cpp  point.cpp  pyutils.h
wrapper/module/: module.cpp
wrapper/piv/: firstpass.cpp
