[build-system]
requires = ["setuptools>=61", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "openpiv-cpp"
version = "0.2.0"
authors = [
    {name = "OpenPIV Contributors", email = "openpiv@openpiv.net"},
]
description = "Fast Particle Image Velocimetry (PIV) using C++ backend"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: Linux :: Manylinux 2014",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
dev = ["pytest>=6.0", "matplotlib>=3.5"]

[project.urls]
Homepage = "https://github.com/OpenPIV/openpiv-c--qt"
Documentation = "https://github.com/OpenPIV/openpiv-c--qt#readme"
Repository = "https://github.com/OpenPIV/openpiv-c--qt.git"
"Bug Tracker" = "https://github.com/OpenPIV/openpiv-c--qt/issues"

[tool.setuptools.packages.find]
include = ["openpiv_cpp_pkg*"]

[tool.setuptools.package-data]
openpiv_cpp_pkg = ["*.so", "*.dll", "*.dylib", "*.pyd"]

# =============================================================================
# cibuildwheel configuration
# =============================================================================
[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
build-frontend = "pip"
test-requires = ["pytest", "numpy"]
test-command = "python -c \"from openpiv_cpp_pkg.openpiv_cpp import piv_process; print('OK')\""
test-skip = ["*-*linux_*aarch64", "*-*macosx_arm64"]

# =============================================================================
# Linux
# =============================================================================
[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
archs = ["x86_64", "aarch64"]

before-all = ["yum install -y cmake ninja-build pkgconfig libtiff-devel libjpeg-devel zlib-devel"]

environment = { PIP_VERBOSE = "1" }
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

# =============================================================================
# macOS
# =============================================================================
[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }
archs = ["x86_64", "arm64"]

before-all = [
    "brew install ninja pkg-config libtiff",
]

repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

# =============================================================================
# Windows
# =============================================================================
[tool.cibuildwheel.windows]
archs = ["AMD64"]

before-all = [
    "pip install delvewheel",
    "cmd /c git clone --depth 1 https://github.com/microsoft/vcpkg.git C:\\vcpkg && C:\\vcpkg\\bootstrap-vcpkg.bat -disableMetrics && C:\\vcpkg\\vcpkg install libtiff:x64-windows",
]

environment = { VCPKG_INSTALLED_DIR = "C:\\vcpkg\\installed" }
repair-wheel-command = "python -m delvewheel repair -w {dest_dir} {wheel}"
